<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.geobullet.csci_4176_project.EditBoard">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <TextView
                android:textSize="20sp"
                android:id="@+id/edit_bulletin_boards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Bulletin Boards" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/board_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bulletin Board Name:"
                android:layout_below="@+id/edit_bulletin_boards"/>

            <EditText
                android:id="@+id/edit_board_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@+id/board_name"
                android:layout_alignParentStart="true" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Radius In Meters"
                android:layout_below="@+id/edit_board_name"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/edit_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_below="@+id/radius"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_date_text_view"
                android:text="@string/start_date_label"
                android:textSize="20sp"
                android:layout_below="@id/edit_radius"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/select_start_date_button"
                android:text="@string/start_date_button_label"
                android:onClick="showDialog"
                android:layout_below="@+id/start_date_text_view" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/end_date_text_view"
                android:text="@string/end_date_label"
                android:textSize="20sp"
                android:layout_below="@id/select_start_date_button"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/select_end_date_button"
                android:text="@string/end_date_button_label"
                android:onClick="showDialog"
                android:layout_below="@+id/end_date_text_view"
                android:layout_alignStart="@+id/select_start_date_button"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/update_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Update"
                android:layout_below="@+id/select_end_date_button"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/delete_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_below="@+id/update_board"
                android:layout_alignStart="@+id/update_board" />


        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
